<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhinaybalusu.messagingapp.UpdateProfileActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:hint="@string/fNameString" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameEditText"
        android:layout_below="@+id/firstNameEditText"
        android:layout_alignLeft="@+id/firstNameEditText"
        android:layout_alignStart="@+id/firstNameEditText"
        android:hint="@string/lNameString" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileIconImageView_update"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateString"
        android:id="@+id/updateButton_edit"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/profileIconImageView_update"
        android:layout_alignRight="@+id/lastNameEditText"
        android:layout_alignEnd="@+id/lastNameEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancelButton_edit"
        android:layout_alignTop="@+id/updateButton_edit"
        android:layout_alignLeft="@+id/lastNameEditText"
        android:layout_alignStart="@+id/lastNameEditText" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:id="@+id/gSwitch"
        android:layout_below="@+id/lastNameEditText"
        android:layout_alignLeft="@+id/lastNameEditText"
        android:layout_alignStart="@+id/lastNameEditText"
        android:layout_toLeftOf="@+id/updateButton_edit"
        android:layout_toStartOf="@+id/updateButton_edit"
        android:textOff="Female"
        android:textOn="Male"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gValueTextView"
        android:layout_below="@+id/lastNameEditText"
        android:layout_toRightOf="@+id/gSwitch"
        android:layout_alignBottom="@+id/gSwitch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp" />
</RelativeLayout>
